2003-05-30  Matti Aarnio  <mea@zmailer.org>

	* scheduler/mailq.c:
	    Just before closing the MAILQ-v2 command socket, do
	    send there "QUIT\n" command too!  Sure the EOF handles
	    the cleanup too, but ...

	* scheduler/mq2.c, scheduler/mailq.pl, scheduler/update.c:
	    Andrey Blochintsev <bag@iptelecom.net.ua>  sent patch
	    to implement "KILL MSG" type functionality via the MAILQ-v2
	    socket command.  Client to implement it is in (surprise),
	    the perl-testbench of MQ2...  Yours Truly did small style
	    edits (like C99/C++ style "//" comment change to "/*" )

2003-05-29  Matti Aarnio  <mea@zmailer.org>

	* include/shmmib.h, scheduler/scheduler.c, scheduler/mailq.inc:
	    Count for scheduler's time-server starts, and last start-time.

	* transports/smtp/smtp.c:
	    Count pipelining transmits only when doing connection
	    open, not for every sent message...

2003-05-27  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpdata.c:
	    Examples in RFC 2034 weren't the best possible, practice has
	    shown, that "250 2.6.0 .." isn't quite what is intended.
	    Sending now (like sendmail) "250 2.0.0 ..."

	* include/shmmib.h, scheduler/Makefile.in, scheduler/mailq.inc,
	  scheduler/scheduler.h, smtpserver/smtpcmds.c, smtpserver/smtphelp.c,
	  smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  transports/smtp/smtp.c:
	    More simpleish counters and gauges...

	* transports/smtp/smtp.c, include/shmmib.h, scheduler/mailq.inc:
	    Count outgoing sessions where we use PIPELINING.

	* scheduler/scheduler.c:
	    Fix the  LogFreeSpace-kB-G  to be filled (instead of
	    overwriting  SpoolFreeSpace-kB-G !)

	* include/shmmib.h, transports/smtp/smtp.c, scheduler/mailq.inc:
	    Added smtp TA process creation counter, and a gauge to
	    observe how many there are running in parallel.

2003-05-26  Matti Aarnio  <mea@zmailer.org>

	* bin/mkdep.in, bin/mklibdep.in, compat/rmail/Makefile.in,