@@ -1,3 +1,10 @@
+2003-06-02  Matti Aarnio  <mea@zmailer.org>
+
+	* transports/smtp/smtp.c:
+	    Wondering, if we are sometimes missing closing of
+	    smtp sessions in SMTP transport agents.  Just in case
+	    we do, added an   atexit()  mechanism to handle it.
+
 2003-05-30  Matti Aarnio  <mea@zmailer.org>
 
 	* scheduler/mailq.c:
